<resources>
    <string name="app_name">player_component</string>
    <string name="cant_parse_url">无法解析播放地址</string>
    <string name="video_record">记忆上次播放到</string>
    <string name="video_skip">继续播放</string>
    <string name="time_separator">/</string>
    <string name="send_danmu">发弹幕</string>
    <string name="test_default_system_time">12:00</string>

    <string name="text_setting_player">播放器设置</string>
    <string name="text_orientation_changeable">开启屏幕翻转</string>
    <string name="text_auto_play_next">自动播放下一集</string>
    <string name="text_video_scale_type">视频比例</string>
    <string name="text_video_speed">播放速度</string>
    <string name="text_audio_stream">音频流</string>

    <string name="text_danmu_setting">弹幕设置</string>
    <string name="text_source_path_tips">路径：</string>
    <string name="text_source_change">换源</string>
    <string name="text_danmu_size_tips">文字大小</string>
    <string name="text_danmu_speed_tips">弹幕速度</string>
    <string name="text_danmu_alpha_tips">文字透明度</string>
    <string name="text_danmu_project_alpha_tips">文字描边宽度</string>
    <string name="text_danmu_offset_tips">时间调节(秒)</string>
    <string name="text_danmu_offset_reduce">—</string>
    <string name="hint_danmu_offset">请输入偏移时间</string>
    <string name="text_danmu_offset_add">+</string>
    <string name="text_danmu_block">弹幕类型屏蔽</string>
    <string name="text_danmu_type_mobile">滚动弹幕</string>
    <string name="text_danmu_type_bottom">底部弹幕</string>
    <string name="text_danmu_type_top">顶部弹幕</string>
    <string name="text_danmu_line_limit">滚动弹幕行数</string>
    <string name="text_danmu_line_unlimited">无限制</string>
    <string name="hint_danmu_line_limit">行数</string>
    <string name="text_danmu_screen_count">滚动弹幕同屏数量</string>
    <string name="text_danmu_screen_count_unlimited">无限制</string>
    <string name="text_danmu_screen_count_auto">自动</string>
    <string name="hit_danmu_screen_count">数量</string>
    <string name="text_danmu_cloud_block">弹幕云屏蔽</string>
    <string name="text_danmu_keyword_block">关键字屏蔽</string>

    <string name="text_danmu_language_origin">原始</string>
    <string name="text_danmu_language_sc">简体</string>
    <string name="text_danmu_language_tc">繁体</string>

    <string name="text_setting_subtitle">字幕设置</string>
    <string name="text_subtitle_close">关闭</string>
    <string name="text_subtitle_stream">字幕流</string>
    <string name="text_subtitle_track_add">添加</string>
    <string name="text_subtitle_size_tips">文字大小</string>
    <string name="text_subtitle_color_tips">文字颜色</string>
    <string name="text_subtitle_stroke_size_tips">描边宽度</string>
    <string name="text_subtitle_stroke_color_tips">描边颜色</string>
    <string name="text_subtitle_offset_tips">时间调节</string>
    <string name="text_subtitle_offset_reduce">—</string>
    <string name="hint_subtitle_offset">请输入偏移时间</string>
    <string name="text_subtitle_offset_add">+</string>

    <string name="exo_track_selection_title_video">视频</string>
    <string name="exo_track_selection_title_audio">音频</string>
    <string name="exo_track_selection_title_text">文字</string>
    <string name="exo_track_selection_none">无</string>
    <string name="exo_track_selection_auto">自动</string>
    <string name="exo_track_unknown">未知</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_mono">单声道</string>
    <string name="exo_track_stereo">立体声</string>
    <string name="exo_track_surround">环绕声</string>
    <string name="exo_track_surround_5_point_1">5.1 环绕声</string>
    <string name="exo_track_surround_7_point_1">7.1 环绕声</string>
    <string name="exo_track_role_alternate">替用轨</string>
    <string name="exo_track_role_supplementary">补充轨</string>
    <string name="exo_track_role_commentary">旁白</string>
    <string name="exo_track_role_closed_captions">字幕</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_item_list">%1$s，%2$s</string>
    <string name="action_add_block_keyword">添加</string>
    <string name="tips_remove_block_keyword">点击可移除关键字</string>
    <string name="tips_keyword_block">关键字屏蔽</string>
    <string name="tips_support_regex">支持正则表达式, 例：regex=^[1–9]d*$</string>
    <string name="tips_danmu_text_size">弹幕字号</string>
    <string name="tips_danmu_location">弹幕位置</string>
    <string name="tips_danmu_color">弹幕颜色</string>
    <string name="hint_send_danmu">发个友善的弹幕见证当下</string>
    <string name="tips_last_play_position">记忆上次播放到</string>
    <string name="action_skip_position">继续播放</string>
    <string name="action_exit_player">退出播放</string>
    <string name="tips_danmu_manager">弹幕管理</string>
    <string name="tips_danmu_keyword_block">关键字屏蔽</string>
    <string name="action_manager_danmu_block">管理</string>
    <string name="text_reset_video_speed">重置</string>
    <string name="select_video_source">选集</string>
    <string name="dan">弹</string>
    <string name="text_add_audio_stream">添加音轨</string>

    <string name="text_danmu_config">弹幕参数设置</string>
    <string name="text_danmu_language_setting">弹幕语言设置</string>
    <string name="text_danmu_block_setting">弹幕屏蔽设置</string>
    <string name="text_reset">重置</string>
    <string name="not_loaded">未加载</string>
    <string name="remove">移除</string>
    <string name="select_local_danmu">选择本地弹幕</string>
    <string name="search_network_danmu">搜索网络弹幕</string>
    <string name="danmu_source">弹幕源</string>
    <string name="danmu_config">弹幕参数</string>
    <string name="danmu_block">弹幕屏蔽</string>

    <string name="text_search">搜索</string>
    <string name="hint_search_danmu">搜索弹幕：番剧名+空格+集数</string>

    <string name="action_aspect_default">默认</string>
    <string name="action_aspect_match">填充</string>
    <string name="action_aspect_crop">裁剪</string>
    <string name="action_aspect_origin">原始</string>
    <string name="action_aspect_16_9">16：9</string>
    <string name="action_aspect_4_3">4：3</string>

    <string name="text_select_subtitle">选择本地字幕</string>
    <string name="action_remove_danmu">移除弹幕</string>
    <string name="action_search_network_danmu">网络弹幕</string>
    <string name="action_select_local_danmu">本地弹幕</string>

    <string name="action_offset_reduce_ten">-10</string>
    <string name="action_offset_reduce_five">-5</string>
    <string name="action_offset_reduce_half">-0.5</string>
    <string name="action_offset_add_half">+0.5</string>
    <string name="action_offset_add_five">+5</string>
    <string name="action_offset_add_ten">+10</string>

    <string name="text_setting_danmu_style">弹幕样式设置</string>
    <string name="text_setting_subtitle_style">字幕样式设置</string>

    <string name="text_no_data">无数据</string>

    <string name="text_long_press_speed">长按速度</string>
    <string name="tips_long_press_rule">长按速度与播放速度一致时，将禁用长按变速</string>
</resources>
