<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/player_setting_nsv"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/player_item_bg_color"
        android:translationX="300dp"
        tools:translationX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/text_danmu_block_setting"
                    android:textColor="@color/text_white_immutable"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_reset_danmu_config"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingHorizontal="10dp"
                    android:text="@string/text_reset"
                    android:textColor="@color/text_theme"
                    android:textSize="14sp" />
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/tips_danmu_keyword_block"
                    android:textColor="@color/text_white_immutable"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/keyword_block_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/action_manager_danmu_block"
                    android:textColor="@color/text_theme"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/text_danmu_block"
                android:textColor="@color/text_white_immutable"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mobile_danmu_iv"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_danmu_mobile" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_danmu_type_mobile"
                        android:textColor="@color/text_white_immutable"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/bottom_danmu_iv"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_danmu_bottom" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_danmu_type_bottom"
                        android:textColor="@color/text_white_immutable"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/top_danmu_iv"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_danmu_top" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_danmu_type_top"
                        android:textColor="@color/text_white_immutable"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/text_danmu_line_limit"
                android:textColor="@color/text_white_immutable"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/max_line_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/max_line_tv"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/background_setting_action_tv"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/text_danmu_line_unlimited"
                    android:textColor="@color/text_white_immutable"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/max_line_et"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:hint="@string/hint_danmu_line_limit"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:text=""
                    android:textColor="@color/text_theme"
                    android:textColorHint="@color/setting_edit_hint_gray"
                    android:textSize="14sp"
                    android:theme="@style/StyleSettingEdit" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/text_danmu_screen_count"
                android:textColor="@color/text_white_immutable"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/number_limit_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/number_no_limit_tv"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/background_setting_action_tv"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/text_danmu_screen_count_unlimited"
                    android:textColor="@color/text_white_immutable"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/number_auto_limit_tv"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/background_setting_action_tv"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/text_danmu_screen_count_auto"
                    android:textColor="@color/text_white_immutable"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/number_input_limit_et"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:hint="@string/hit_danmu_screen_count"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:text=""
                    android:textColor="@color/text_theme"
                    android:textColorHint="@color/setting_edit_hint_gray"
                    android:textSize="14sp"
                    android:theme="@style/StyleSettingEdit" />
            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>